fix spacing on search field in navbar

--- a/app/common/Navigation/styles.css
+++ b/app/common/Navigation/styles.css
@@ -59,7 +59,7 @@
 .searchForm {
   border: 1px solid var(--color-grey-light);
   border-radius: 4px;
-  padding: 4px;
+  padding: 6px;
   padding-right: 20px;
   display: flex;
   align-items: center;
